Add an assets watcher to live reload CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,15 +6,15 @@
 
 html {
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 115%;
+  font-size: 125%;
   line-height: 1.5;
   color: #504746;
 }
 
 body {
   margin: 0 auto;
-  max-width: 50em;
-  padding: 2em 1em;
+  max-width: 40em;
+  padding: 1em;
 }
 
 h1, h2, strong {
