--- a/assets/style.css
+++ b/assets/style.css
@@ -88,3 +88,16 @@ button:disabled {
   background: rgb(var(--brand-color));
   filter: contrast(60%) brightness(120%);
 }
+
+.dot {
+  height: 0.7em;
+  width: 0.7em;
+  margin-right: 0.3em;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.green {
+  background: chartreuse; /* like pastis but better */
+}
